syntax = "proto3";

package orders.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

import "payment/v1/model/payment.proto";
import "reserve/v1/model/reserve.proto";

message Order {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  optional google.protobuf.Timestamp updated_at = 3;
  string customer_id = 4;
  optional string payment_id = 5;
  optional string reserve_id = 6;
  Status status = 7;
  optional payment.v1.Payment.Status payment_status = 8;
  optional Delivery delivery = 9;
  repeated reserve.v1.Reserve.Item items = 10;

  enum Status {
    CREATING = 0;
    CREATED = 1;
    APPROVING = 2;
    APPROVED = 3;
    RELEASING = 4;
    RELEASED = 5;
    INSUFFICIENT = 6;
    CANCELLING = 7;
    CANCELLED = 8;
  }

  message Delivery {
    optional google.protobuf.Timestamp date_time = 1;
    string address = 2;
    Type type = 3;
    enum Type {
      PICKUP = 0;
      COURIER = 1;
    }
  }
}
